# ciphercodex

./: .gitignore  Color.kt  README.md  Type.kt  ciphercodex-design-brief.md
.github/workflows/: android.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
android/app/src/main/res/values/: colors.xml  strings.xml  (+1 more)
android/gradle/: libs.versions.toml
docs/superpowers/plans/: 2026-07-12-handwriting-recognition.md  2026-07-12-notes-rm2-viewer.md  2026-07-12-webdav-sync-android-resume.md  2026-07-12-webdav-sync-android.md  2026-07-13-android-ink-authoring.md  2026-07-13-handwriting-recognition-resume.md  2026-07-13-x4-webdav-sync.md  2026-07-16-boox-raw-ink.md
docs/superpowers/specs/: 2026-07-11-remarkable2-os-design.md  2026-07-12-handwriting-recognition-design.md  2026-07-12-notes-rm2-notebook-viewer-design.md  2026-07-12-webdav-sync-android-x4-design.md  2026-07-13-android-ink-authoring-design.md  2026-07-16-boox-raw-ink-design.md
remarkable2-os/: .gitignore  CMakeLists.txt  LICENSES.md  README.md  STATUS.md
remarkable2-os/build-rm2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  ciphercodex-shell  ciphercodex-shell_qmltyperegistrations.cpp  cmake_install.cmake  input-probe
remarkable2-os/build-rm2/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  ciphercodex-shell_qml.cmake  ciphercodex-shell_res.cmake
remarkable2-os/build-rm2/.qt/deploy_qml_imports/: ciphercodex_shell.cmake
remarkable2-os/build-rm2/.qt/qml_imports/: ciphercodex-shell_build.cmake  ciphercodex-shell_build.rsp  ciphercodex-shell_conf.rsp
remarkable2-os/build-rm2/.qt/rcc/: ciphercodex-shell_raw_qml_0.qrc  qmake_CipherCodex.qrc  qrc_ciphercodex-shell_raw_qml_0.cpp  qrc_qmake_CipherCodex.cpp
remarkable2-os/build-rm2/.rcc/qmlcache/: all_aotstats.aotstatslist  ciphercodex-shell_qml_loader_file_list.rsp  ciphercodex-shell_qmlcache_loader.cpp  module_ciphercodex-shell.aotstatslist
remarkable2-os/build-rm2/.rcc/qmlcache/ciphercodex-shell_src/: Main_qml.cpp  Main_qml.cpp.aotstats
remarkable2-os/build-rm2/.rcc/qmlcache/ciphercodex-shell_src/qml/: HomeScreen_qml.cpp  HomeScreen_qml.cpp.aotstats  NotebookListScreen_qml.cpp  NotebookListScreen_qml.cpp.aotstats  PageScreen_qml.cpp  PageScreen_qml.cpp.aotstats
remarkable2-os/build-rm2/.rcc/qmllint/: ciphercodex-shell.rsp  ciphercodex-shell_json.rsp  ciphercodex-shell_module.rsp
remarkable2-os/build-rm2/CipherCodex/: ciphercodex-shell.qmltypes  ciphercodex-shell_qml_module_dir_map.qrc  qmldir
remarkable2-os/build-rm2/CipherCodex/src/: Main.qml
remarkable2-os/build-rm2/CipherCodex/src/qml/: HomeScreen.qml  NotebookListScreen.qml  PageScreen.qml
remarkable2-os/build-rm2/ccx-storage_autogen/: deps  moc_predefs.h
remarkable2-os/build-rm2/ciphercodex-shell_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
remarkable2-os/build-rm2/ciphercodex-shell_autogen/UVLADIE3JM/: moc_inkitem.cpp  moc_inkitem.cpp.d  moc_inkitem.cpp.json  moc_notebookcontroller.cpp  moc_notebookcontroller.cpp.d  moc_notebookcontroller.cpp.json  moc_penreader.cpp  moc_penreader.cpp.d  moc_penreader.cpp.json
remarkable2-os/build-rm2/input-probe_autogen/: deps  moc_predefs.h
remarkable2-os/build-rm2/meta_types/: ciphercodex-shell_json_file_list.txt  ciphercodex-shell_json_file_list.txt.timestamp  qt6ciphercodex-shell_metatypes.json  qt6ciphercodex-shell_metatypes.json.gen
remarkable2-os/build-rm2/qmltypes/: ciphercodex-shell_foreign_types.txt
remarkable2-os/docs/: hardware-audit.md  phase1-contracts.md  phase2a-contracts.md  phase2b-contracts.md  phase2c-contracts.md  phase3-sync-design.md  phase3b-contracts.md  stroke-format.md
remarkable2-os/scripts/: build.sh  deploy.sh  restore-stock.sh  run-on-device.sh  sdk-version.env  test.sh
remarkable2-os/src/: Main.qml  epscreenmode.cpp  epscreenmode.h  idlewatch.cpp  idlewatch.h  inkitem.cpp  inkitem.h  main.cpp  notebookcontroller.cpp  notebookcontroller.h  penreader.cpp  penreader.h  powerbutton.cpp  powerbutton.h  readercontroller.cpp  readercontroller.h
remarkable2-os/src/epub/: epubdocument.cpp  epubdocument.h  epubrender.cpp  epubrender.h  epubview.cpp  epubview.h
remarkable2-os/src/pdf/: pdfdocument.cpp  pdfdocument.h  pdfview.cpp  pdfview.h
remarkable2-os/src/pdf/pdfium/: fpdf_doc.h  fpdf_text.h  fpdfview.h
remarkable2-os/src/qml/: BookDetailScreen.qml  DotGrid.qml  EpubReaderScreen.qml  Hatch.qml  HomeScreen.qml  KeptScreen.qml  Keyboard.qml  LibraryScreen.qml  NotebookListScreen.qml  PageScreen.qml  PdfReaderScreen.qml  SettingsScreen.qml  SleepScreen.qml  Theme.qml
remarkable2-os/src/storage/: storage.cpp  storage.h
remarkable2-os/src/sync/: kosync.cpp  kosync.h  kosyncclient.cpp  syncengine.cpp  syncengine.h  syncstore.cpp  syncstore.h  webdav.cpp  webdav.h
remarkable2-os/src/tools/: input_probe.c
remarkable2-os/tests/: test_epub_text.cpp  test_highlights.cpp  test_kosync.cpp  test_library.cpp  test_powerloss.sh  test_storage.cpp  test_storage_v2.cpp  test_sync.cpp
(+76 files in other folders)
